# bce

./: CMakeLists.txt  README.md  bce.cpp  bce.h  builtins.h  context.h  data_model.h  dictionary.h  main.cpp
cmake/: Finddivsufsort.cmake
dictionary/: dict_avx2.h
vector/: int32x16_avx512.h  int32x1_cpp.h  int32x4_sse4.h  int32x8_avx2.h
